--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
         <div wrapped>            
             <div class="content">  
                 <!--h1>Välkommen</h1-->          
-                <div class="about">
-                    <h1>About</h1>
-                    <img src="./images/ME.jpg" alt="Picture of me" width="225" height="225">
-                    <p>Simon Jonsson</p>
-                    <p>Software & web developer</p>              
-                    <p>Licensed PT & nutrition advisor</p>
+                <div class="about">                    
+                    <br><img src="./images/ME.jpg" alt="Picture of me" width="225" height="225">
+                    <h4>Simon Jonsson</h4>
+                    <h4>*Software & web developer*</h4>              
+                    <h4>PT och kostrådgivare</h4>
                 </div>
                 <div class="info">
-                    <p>Simon Jonsson<br/>
-                    Software & web developer<br/>          
-                    Licensed PT & Nutrition advisor</p>                    
+                    <h1>Erfarenheter</h1>
+                    <p></p>                                       
                 </div>
                 <div class="about">
-                    <h1>Links</h1>
+                    <h1>Länkar</h1>
+                    <a href="https://github.com/Behemoth39?tab=repositories">GitHub</a><br>
+                    <a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/">Linkedin</a>
                 </div>
             </div>    
         </div>
