--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">         
-        <meta content="HTML, CSS">
-        <meta lang="en">
-        <link rel="stylesheet" href="style.css" />
-        <link rel="shortcut icon" href="./images/icon.webp"/>
-        <title>Landing page</title>
-    </head>
-    <body>   
-        <div wrapped>            
-            <div class="content">  
-                <!--h1>Välkommen</h1-->          
-                <div class="about">                    
-                    <br><img src="./images/ME.jpg" alt="Picture of me" width="225" height="225">
-                    <h4>Simon Jonsson</h4>
-                    <h4>*Software & web developer*</h4>              
-                    <h4>PT och kostrådgivare</h4>
-                </div>
-                <div class="info">
-                    <h1>Erfarenheter</h1>
-                    <p></p>                                       
-                </div>
-                <div class="about">
-                    <h1>Länkar</h1>
-                    <a href="https://github.com/Behemoth39?tab=repositories">GitHub</a><br>
-                    <a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/">Linkedin</a>
-                </div>
-            </div>    
+  <head>
+    <meta charset="UTF-8" />
+    <meta content="HTML, CSS" />
+    <meta lang="en" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./images/icon.webp" />
+    <title>Landing page</title>
+  </head>
+  <body>
+    <div wrapped>
+      <div class="content">
+        <!-- Behövs 2 abouts? -->
+        <div class="about">
+          <br>
+          <img src="./images/ME.jpg" alt="Picture of me" width="225" height="225"/>
+          <h4>Simon Jonsson</h4>
+          <h4>*Software & web developer*</h4>
+          <h4>PT och kostrådgivare</h4>
         </div>
+        <div class="info">
+          <h1>Erfarenheter</h1>
+          <p></p>
+        </div>
+        <div class="about">
+          <h1>Länkar</h1>
+          <a href="https://github.com/Behemoth39?tab=repositories">GitHub</a>
+          <br />
+          <a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/">Linkedin</a >
+        </div>
+      </div>
+    </div>
   </body>
 </html>
