--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="HTML, CSS" />
     <meta lang="en" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="./images/icon.webp" />
+    <link rel="shortcut icon" href="./images/?" />
     <title>Landing page</title>
   </head>
   <body>
@@ -18,17 +18,14 @@
           <h4>Simon Jonsson</h4>
           <h4>*Software & web developer*</h4>
           <h4>PT och kostrådgivare</h4>
-        </div>
-        <div class="info">
-          <h1>Erfarenheter</h1>
-          <p></p>
-        </div>
-        <div class="about">
-          <h1>Länkar</h1>
+          <br />
           <a href="https://github.com/Behemoth39?tab=repositories">GitHub</a>
           <br />
           <a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/">Linkedin</a >
-        </div>
+        </div>        
+        <div class="info">          
+          <p>Robbot</p>
+        </div>        
       </div>
     </div>
   </body>
