redid the layout

--- a/index.html
+++ b/index.html
@@ -9,24 +9,16 @@
     <title>Landing page</title>
   </head>
   <body>
-    <div wrapped>
+    <div class="contain">
+      <div class="links">               
+        <div><h4>Om</h4></div>
+        <div><h4>Erfarenheter</h4></div> 
+        <div><h4>Portfolio</h4></div> 
+        <div><h4>Kontakta</h4></div>             
+      </div> 
       <div class="content">
-        <!-- Behövs 2 abouts? -->
-        <div class="about">
-          <br>
-          <img src="./images/ME.jpg" alt="Picture of me" width="225" height="225"/>
-          <h4>Simon Jonsson</h4>
-          <h4>*Software & web developer*</h4>
-          <h4>PT och kostrådgivare</h4>
-          <br />
-          <a href="https://github.com/Behemoth39?tab=repositories">GitHub</a>
-          <br />
-          <a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/">Linkedin</a >
-        </div>        
-        <div class="info">          
-          <p>Robbot</p>
-        </div>        
-      </div>
+        <h1>Välkommen till min sida</h1>
+      </div>       
     </div>
   </body>
 </html>
