--- a/index.html
+++ b/index.html
@@ -6,19 +6,24 @@
     <meta lang="en" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./images/?" />
-    <title>Landing page</title>
+    <title>Simon Jonsson Portfolio</title>
   </head>
   <body>
     <div class="contain">
-      <div class="links">               
+      <div class="menu">               
         <div><h4>Om</h4></div>
         <div><h4>Erfarenheter</h4></div> 
         <div><h4>Portfolio</h4></div> 
         <div><h4>Kontakta</h4></div>             
       </div> 
       <div class="content">
-        <h1>Välkommen till min sida</h1>
-      </div>       
+        <h1>Simon Jonsson</h1>
+        <h5>Software & web developer</h5>        
+      </div> 
+      <div class="links">
+        <div><a href="https://github.com/Behemoth39"><img src="./images/GitHub.png" height="120" width="120"></a></div>
+        <div><a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/"><img src="./images/linkedin.png" height="120" width="120"></a></div>
+      </div>      
     </div>
   </body>
 </html>
