--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta content="HTML, CSS" />
-    <meta lang="en" />
+    <meta lang="sv" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./images/?" />
     <title>Simon Jonsson Portfolio</title>
@@ -11,10 +11,10 @@
   <body>
     <div class="contain">
       <div class="menu">               
-        <div><h4>Om</h4></div>
-        <div><h4>Erfarenheter</h4></div> 
-        <div><h4>Portfolio</h4></div> 
-        <div><h4>Kontakta</h4></div>             
+        <div><a href="Om.html"><h4>Om</h4></a></div>
+        <div><a href="Erfarenheter.html"><h4>Erfarenheter</h4></a></div>
+        <div><a href="Portfolio.html"><h4>Portfolio</h4></a></div>
+        <div><a href="Kontakt.html"><h4>Kontakta</h4></a></div>                    
       </div> 
       <div class="content">
         <h1>Simon Jonsson</h1>
