updated all pages

--- a/Erfarenheter.html
+++ b/Erfarenheter.html
@@ -8,6 +8,23 @@
     <link rel="shortcut icon" href="./images/?" />
     <title>Simon Jonsson Portfolio</title>
   </head>
-  <body>   
+  <body>
+    <div class="contain">
+      <div class="menu">    
+        <div><a href="index.html"><h4>Hem</h4></a></div>             
+        <div><a href="Om.html"><h4>Om mig</h4></a></div>
+        <div><a href="Erfarenheter.html"><h4>Erfarenheter</h4></a></div>
+        <div><a href="Portfolio.html"><h4>Portfolio</h4></a></div>
+        <div><a href="Kontakt.html"><h4>Kontakta</h4></a></div>                    
+      </div> 
+      <div class="content">        
+        <h5>*Software & web developer*</h5> 
+        <br><div><a href="Kontakt.html"><button class="btn">Kontakta mig!</button></a></div>        
+      </div> 
+      <div class="links">
+        <div><a href="https://github.com/Behemoth39"><img src="./images/GitHub.png" height="120" width="120"></a></div>
+        <div><a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/"><img src="./images/linkedin.png" height="120" width="120"></a></div>
+      </div>      
+    </div>
   </body>
 </html>
