tinkered with the images

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,8 +9,8 @@
     <title>Simon Jonsson Portfolio</title>
   </head>
   <body>
-    <div class="contain">
-      <div class="menu">    
+    <div class="contain">  <!-- Någon form av "transition" skulle vara bäst att ha mellan sidor. Då det tar lite tid att ladda alla bilder  -->  
+      <div class="menu">   <!-- Har för tillfället "löst" problemet med att ha svart bakgrund underst -->  
         <div><a href="index.html"><h4>Hem</h4></a></div>             
         <div><a href="Om.html"><h4>Om mig</h4></a></div>
         <div><a href="Erfarenheter.html"><h4>Erfarenheter</h4></a></div>
@@ -18,7 +18,7 @@
         <div><a href="Kontakt.html"><h4>Kontakta</h4></a></div>                    
       </div> 
       <div class="content">        
-        <div class="port">
+        <div class="port"> <!-- Får inte till 0 marginal mellan <a> så det blir mellan rum, vilket jag inte vill ha -->
           <div><a href="#"><img src="./placeholder/1.jpg" height="250" width="250"></a></div>
           <div><a href="#"><img src="./placeholder/2.jpg" height="250" width="250"></a></div>
           <div><a href="#"><img src="./placeholder/3.jpg" height="250" width="250"></a></div>
