tinkered with the text

--- a/Erfarenheter.html
+++ b/Erfarenheter.html
@@ -10,21 +10,70 @@
   </head>
   <body>
     <div class="contain">
-      <div class="menu">    
-        <div><a href="index.html"><h4>Hem</h4></a></div>             
-        <div><a href="Om.html"><h4>Om mig</h4></a></div>
-        <div><a href="Erfarenheter.html"><h4>Erfarenheter</h4></a></div>
-        <div><a href="Portfolio.html"><h4>Portfolio</h4></a></div>
-        <div><a href="Kontakt.html"><h4>Kontakta</h4></a></div>                    
-      </div> 
-      <div class="content">        
-        <h5>*Software & web developer*</h5> 
-        <br><div><a href="Kontakt.html"><button class="btn">Kontakta mig!</button></a></div>        
-      </div> 
+      <div class="menu">
+        <div>
+          <a href="index.html"><h4>Hem</h4></a>
+        </div>
+        <div>
+          <a href="Om.html"><h4>Om mig</h4></a>
+        </div>
+        <div>
+          <a href="Erfarenheter.html"><h4>Erfarenheter</h4></a>
+        </div>
+        <div>
+          <a href="Portfolio.html"><h4>Portfolio</h4></a>
+        </div>
+        <div>
+          <a href="Kontakt.html"><h4>Kontakta</h4></a>
+        </div>
+      </div>
+      <div class="content">
+        <!-- Hade vart fint med en visualisering på hur mycket av varje "språk" och typ av arbete jag gjort: likt https://jacekjeznach.com/skills -->
+        <h1>Kompetens och erfarenhet</h1>
+        <p>
+          För tillfället är jag under utbilding och har inte byggt några större appar eller sidor än.
+          Hittills har jag lärt mig grunderna i HTML och CSS. Framöver kommer jag även lära mig JavaScript frameworks som React, Angular, Vue.js.
+          Men även .Net och SQLite. Efter detta kommer jag att kunna jobba som junior Full-stack developer.
+        </p>
+        <p>
+          Spana in min
+          <a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/"
+            >LinkedIn</a
+          >
+          profil, alternativt <a href="Kontakt.html">kontakta</a> mig direkt.
+        </p>
+        <ul>
+          <h3>Heltidstjänster</h3>
+          <li>Operatör Sapa profiler: 2016 - 2017</li>
+          <li>
+            Hydro building systems Sweden ab: 2017 - <br />Software &
+            Development
+          </li>
+        </ul>
+        <ul>
+          <h3>Utbildningar</h3>
+          <li>Njudungsgymnasiet: 2010 - 2014<br />Gymnasieingenjör</li>
+          <li>
+            Vetlanda Lärcentrum: 2014 - 2015<br />Robottekniker/robotoperatör
+          </li>
+          <li>Ädelfors folkhögskola: 2015 - 2016<br />Friskvårdspedagog</li>
+          <li>
+            Yrkeshögskolan Jönköping: 2022 - 2024<br />WEBBUTVECKLARE .NET
+          </li>
+        </ul>
+      </div>
       <div class="links">
-        <div><a href="https://github.com/Behemoth39"><img src="./images/GitHub.png" height="120" width="120"></a></div>
-        <div><a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/"><img src="./images/linkedin.png" height="120" width="120"></a></div>
-      </div>      
+        <div>
+          <a href="https://github.com/Behemoth39"
+            ><img src="./images/GitHub.png" height="120" width="120"
+          /></a>
+        </div>
+        <div>
+          <a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/"
+            ><img src="./images/linkedin.png" height="120" width="120"
+          /></a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
