--- a/Kontakt.html
+++ b/Kontakt.html
@@ -10,24 +10,45 @@
   </head>
   <body>
     <div class="contain">
-      <div class="menu">           
-        <div><a href="index.html"><h4>Hem</h4></a></div>      
-        <div><a href="Om.html"><h4>Om mig</h4></a></div>
-        <div><a href="Erfarenheter.html"><h4>Erfarenheter</h4></a></div>
-        <div><a href="Portfolio.html"><h4>Portfolio</h4></a></div>
-        <div><a href="Kontakt.html"><h4>Kontakta</h4></a></div>                    
-      </div> 
-      <div class="content">        
-        <h1>Kontakt</h1> 
-        <p>Har du frågor eller sugen på att sammarbeta?
-           Skicka gärna ett mail: <a class="mail" href="mailto:simme_jonsson@hotmail.com">simme_jonsson@hotmail.com </a>
+      <div class="menu">
+        <div>
+          <a href="index.html"><h4>Hem</h4></a>
+        </div>
+        <div>
+          <a href="Om.html"><h4>Om mig</h4></a>
+        </div>
+        <div>
+          <a href="Erfarenheter.html"><h4>Erfarenheter</h4></a>
+        </div>
+        <div>
+          <a href="Portfolio.html"><h4>Portfolio</h4></a>
+        </div>
+        <div>
+          <a href="Kontakt.html"><h4>Kontakta</h4></a>
+        </div>
+      </div>
+      <div class="content">
+        <h1>Kontakt</h1>
+        <p>
+          Har du frågor eller sugen på att sammarbeta? Skicka gärna ett mail:
+          <a class="mail" href="mailto:simme_jonsson@hotmail.com"
+            >simme_jonsson@hotmail.com
+          </a>
         </p>
-        <!-- Här skulle ett kontaktformulär passa utmärkt -->              
-      </div> 
+        <!-- Här skulle ett kontaktformulär passa utmärkt -->
+      </div>
       <div class="links">
-        <div><a href="https://github.com/Behemoth39"><img src="./images/GitHub.png" height="120" width="120"></a></div>
-        <div><a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/"><img src="./images/linkedin.png" height="120" width="120"></a></div>
-      </div>      
+        <div>
+          <a href="https://github.com/Behemoth39"
+            ><img src="./images/GitHub.png" height="120" width="120"
+          /></a>
+        </div>
+        <div>
+          <a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/"
+            ><img src="./images/linkedin.png" height="120" width="120"
+          /></a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
