--- a/Om.html
+++ b/Om.html
@@ -10,25 +10,48 @@
   </head>
   <body>
     <div class="contain">
-      <div class="menu">  
-        <div><a href="index.html"><h4>Hem</h4></a></div>               
-        <div><a href="Om.html"><h4>Om mig</h4></a></div>
-        <div><a href="Erfarenheter.html"><h4>Erfarenheter</h4></a></div>
-        <div><a href="Portfolio.html"><h4>Portfolio</h4></a></div>
-        <div><a href="Kontakt.html"><h4>Kontakta</h4></a></div>                    
-      </div> 
-      <div class="content"> 
-        <h1>Simon Jonsson</h1>       
-        <P>Jag är en webb och mjukvaruutvecklare under utbildning,
-           som är bosatt i Vetlanda, jönköpings län.</p>         
-        <p>Jag har ett brett teknik och tränings intresse vilket har styrt mina utbildningsval.</p> 
+      <div class="menu">
+        <div>
+          <a href="index.html"><h4>Hem</h4></a>
+        </div>
+        <div>
+          <a href="Om.html"><h4>Om mig</h4></a>
+        </div>
+        <div>
+          <a href="Erfarenheter.html"><h4>Erfarenheter</h4></a>
+        </div>
+        <div>
+          <a href="Portfolio.html"><h4>Portfolio</h4></a>
+        </div>
+        <div>
+          <a href="Kontakt.html"><h4>Kontakta</h4></a>
+        </div>
+      </div>
+      <div class="content">
+        <h1>Simon Jonsson</h1>
+        <p>
+          Jag är en webb och mjukvaruutvecklare under utbildning, som är bosatt
+          i Vetlanda, jönköpings län.
+        </p>
+        <p>
+          Jag har ett brett teknik och tränings intresse vilket har styrt mina
+          utbildningsval.
+        </p>
         <p>Gymnasieingenjör, robottekniker, PT, kostrådgivare och massör.</p>
-        <a class="con" href="Kontakt.html">Intresserad av att sammarbeta?</a>               
-      </div> 
+        <a class="con" href="Kontakt.html">Intresserad av att sammarbeta?</a>
+      </div>
       <div class="links">
-        <div><a href="https://github.com/Behemoth39"><img src="./images/GitHub.png" height="120" width="120"></a></div>
-        <div><a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/"><img src="./images/linkedin.png" height="120" width="120"></a></div>
-      </div>      
+        <div>
+          <a href="https://github.com/Behemoth39"
+            ><img src="./images/GitHub.png" height="120" width="120"
+          /></a>
+        </div>
+        <div>
+          <a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/"
+            ><img src="./images/linkedin.png" height="120" width="120"
+          /></a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
