--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,30 +9,83 @@
     <title>Simon Jonsson Portfolio</title>
   </head>
   <body>
-    <div class="contain">  <!-- Någon form av "transition" skulle vara bäst att ha mellan sidor. Då det tar lite tid att ladda alla bilder  -->  
-      <div class="menu">   <!-- Har för tillfället "löst" problemet med att ha svart bakgrund underst -->  
-        <div><a href="index.html"><h4>Hem</h4></a></div>             
-        <div><a href="Om.html"><h4>Om mig</h4></a></div>
-        <div><a href="Erfarenheter.html"><h4>Erfarenheter</h4></a></div>
-        <div><a href="Portfolio.html"><h4>Portfolio</h4></a></div>
-        <div><a href="Kontakt.html"><h4>Kontakta</h4></a></div>                    
-      </div> 
-      <div class="content">        
-        <div class="port"> <!-- Får inte till 0 marginal mellan <a> så det blir mellan rum, vilket jag inte vill ha -->
-          <div><a href="#"><img src="./placeholder/1.jpg" height="250" width="250"></a></div>
-          <div><a href="#"><img src="./placeholder/2.jpg" height="250" width="250"></a></div>
-          <div><a href="#"><img src="./placeholder/3.jpg" height="250" width="250"></a></div>
-          <div><a href="#"><img src="./placeholder/4.jpg" height="250" width="250"></a></div>
-          <div><a href="#"><img src="./placeholder/5.jpg" height="250" width="250"></a></div>
-          <div><a href="#"><img src="./placeholder/6.jpg" height="250" width="250"></a></div>
-          <div><a href="#"><img src="./placeholder/7.jpg" height="250" width="250"></a></div>
-          <div><a href="#"><img src="./placeholder/8.jpg" height="250" width="250"></a></div>
-        </div>  
-      </div> 
+    <div class="contain">
+      <!-- Någon form av "transition" skulle vara bäst att ha mellan sidor. Då det tar lite tid att ladda alla bilder  -->
+      <div class="menu">
+        <!-- Har för tillfället "löst" problemet med att ha svart bakgrund underst -->
+        <div>
+          <a href="index.html"><h4>Hem</h4></a>
+        </div>
+        <div>
+          <a href="Om.html"><h4>Om mig</h4></a>
+        </div>
+        <div>
+          <a href="Erfarenheter.html"><h4>Erfarenheter</h4></a>
+        </div>
+        <div>
+          <a href="Portfolio.html"><h4>Portfolio</h4></a>
+        </div>
+        <div>
+          <a href="Kontakt.html"><h4>Kontakta</h4></a>
+        </div>
+      </div>
+      <div class="content">
+        <div class="port">
+          <!-- Får inte till 0 marginal mellan <a></a> så det blir mellan rum, vilket jag inte vill ha -->
+          <div>
+            <a href="#"
+              ><img src="./placeholder/1.jpg" height="250" width="250"
+            /></a>
+          </div>
+          <div>
+            <a href="#"
+              ><img src="./placeholder/2.jpg" height="250" width="250"
+            /></a>
+          </div>
+          <div>
+            <a href="#"
+              ><img src="./placeholder/3.jpg" height="250" width="250"
+            /></a>
+          </div>
+          <div>
+            <a href="#"
+              ><img src="./placeholder/4.jpg" height="250" width="250"
+            /></a>
+          </div>
+          <div>
+            <a href="#"
+              ><img src="./placeholder/5.jpg" height="250" width="250"
+            /></a>
+          </div>
+          <div>
+            <a href="#"
+              ><img src="./placeholder/6.jpg" height="250" width="250"
+            /></a>
+          </div>
+          <div>
+            <a href="#"
+              ><img src="./placeholder/7.jpg" height="250" width="250"
+            /></a>
+          </div>
+          <div>
+            <a href="#"
+              ><img src="./placeholder/8.jpg" height="250" width="250"
+            /></a>
+          </div>
+        </div>
+      </div>
       <div class="links">
-        <div><a href="https://github.com/Behemoth39"><img src="./images/GitHub.png" height="120" width="120"></a></div>
-        <div><a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/"><img src="./images/linkedin.png" height="120" width="120"></a></div>
-      </div>      
+        <div>
+          <a href="https://github.com/Behemoth39"
+            ><img src="./images/GitHub.png" height="120" width="120"
+          /></a>
+        </div>
+        <div>
+          <a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/"
+            ><img src="./images/linkedin.png" height="120" width="120"
+          /></a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
