--- a/Om.html
+++ b/Om.html
@@ -6,7 +6,7 @@
     <meta lang="sv" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./images/?" />
-    <title>Simon Jonsson Portfolio</title>
+    <title>Simon Jonsson - web developer</title>
   </head>
   <body>
     <div class="contain">
