Styled icons and links

--- a/Om.html
+++ b/Om.html
@@ -38,7 +38,7 @@
           utbildningsval.
         </p>
         <p>Gymnasieingenjör, robottekniker, PT, kostrådgivare och massör.</p>
-        <a class="con" href="Kontakt.html">Intresserad av att sammarbeta?</a>
+        <p><a href="Kontakt.html">Intresserad av att sammarbeta?</a></p>
       </div>
       <div class="links">
         <div>
