--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="shortcut icon" href="./images/?" />
     <title>Simon Jonsson - web developer</title>
   </head>
-  <body>
+  <body> 
+    <!-- Lägg till möjlighet att ändra mellan svenska och engelska -->
     <div class="contain">
       <div class="menu">
         <div>
