tinkered with some margins

--- a/Om.html
+++ b/Om.html
@@ -29,6 +29,7 @@
       </div>
       <div class="content">
         <h1>Simon Jonsson</h1>
+        <img src="./images/ME.jpg" height="250" width="250"> <!-- Ser jäkligt monka ut med bild där -->
         <p>
           Jag är en webb och mjukvaruutvecklare under utbildning, som är bosatt
           i Vetlanda, jönköpings län.
@@ -37,7 +38,7 @@
           Jag har ett brett teknik och tränings intresse vilket har styrt mina
           utbildningsval.
         </p>
-        <p>Gymnasieingenjör, robottekniker, PT, kostrådgivare och massör.</p>
+        <p>Tidigare utbildningar: Gymnasieingenjör, robottekniker, PT, kostrådgivare och massör.</p>
         <p><a href="Kontakt.html">Intresserad av att sammarbeta?</a></p>
       </div>
       <div class="links">
