--- a/Portfolio.html
+++ b/Portfolio.html
@@ -33,45 +33,45 @@
         <div class="port">
           <!-- Får inte till 0 marginal mellan <a></a> så det blir mellan rum, vilket jag inte vill ha -->
           <div>
-            <a href="#"
-              ><img src="./placeholder/1.jpg" height="250" width="250"
-            /></a>
+            <a href="#">
+              <img src="./placeholder/1.jpg" height="250" width="250"/>
+            </a>
           </div>
           <div>
-            <a href="#"
-              ><img src="./placeholder/2.jpg" height="250" width="250"
-            /></a>
-          </div>
+            <a href="#">
+              <img src="./placeholder/2.jpg" height="250" width="250"/>
+            </a>
+          </div>   
           <div>
-            <a href="#"
-              ><img src="./placeholder/3.jpg" height="250" width="250"
-            /></a>
-          </div>
+            <a href="#">
+              <img src="./placeholder/3.jpg" height="250" width="250"/>
+            </a>
+          </div> 
           <div>
-            <a href="#"
-              ><img src="./placeholder/4.jpg" height="250" width="250"
-            /></a>
-          </div>
+            <a href="#">
+              <img src="./placeholder/4.jpg" height="250" width="250"/>
+            </a>
+          </div> 
           <div>
-            <a href="#"
-              ><img src="./placeholder/5.jpg" height="250" width="250"
-            /></a>
-          </div>
+            <a href="#">
+              <img src="./placeholder/5.jpg" height="250" width="250"/>
+            </a>
+          </div> 
           <div>
-            <a href="#"
-              ><img src="./placeholder/6.jpg" height="250" width="250"
-            /></a>
-          </div>
+            <a href="#">
+              <img src="./placeholder/6.jpg" height="250" width="250"/>
+            </a>
+          </div> 
           <div>
-            <a href="#"
-              ><img src="./placeholder/7.jpg" height="250" width="250"
-            /></a>
-          </div>
+            <a href="#">
+              <img src="./placeholder/7.jpg" height="250" width="250"/>
+            </a>
+          </div> 
           <div>
-            <a href="#"
-              ><img src="./placeholder/8.jpg" height="250" width="250"
-            /></a>
-          </div>
+            <a href="#">
+              <img src="./placeholder/8.jpg" height="250" width="250"/>
+            </a>
+          </div>                
         </div>
       </div>
       <div class="links">
