--- a/Kontakt.html
+++ b/Kontakt.html
@@ -30,7 +30,7 @@
       <div class="content">
         <h1>Kontakt</h1>
         <p>
-          Har du frågor eller sugen på att sammarbeta? Skicka gärna ett mail:
+          Har du frågor eller sugen på att sammarbeta?<br> Skicka gärna ett mail:
           <a class="mail" href="mailto:simme_jonsson@hotmail.com"
             >simme_jonsson@hotmail.com
           </a>
