--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head> 
+    <!-- anpassa för mobil med -->
     <meta charset="UTF-8" />
     <meta content="HTML, CSS" />
     <meta lang="sv" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="./images/?" />
+    <link rel="shortcut icon" href="./images/ME.jpg" />
     <title>Simon Jonsson - web developer</title>
   </head>
   <body> 
