--- a/Portfolio.html
+++ b/Portfolio.html
@@ -5,7 +5,7 @@
     <meta content="HTML, CSS" />
     <meta lang="sv" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="./images/?" />
+    <link rel="shortcut icon" href="./images/ME.jpg" />
     <title>Simon Jonsson - web developer</title>
   </head>
   <body>
