added more mobile adaptations

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -11,9 +11,8 @@
   </head>
   <body>
     <div class="contain">
-      <!-- Någon form av "transition" skulle vara bäst att ha mellan sidor. Då det tar lite tid att ladda alla bilder  -->
-      <div class="menu">
-        <!-- Har för tillfället "löst" problemet med att ha svart bakgrund underst -->
+      <!-- Någon form av "transition" skulle vara bäst att ha mellan sidor  -->
+      <div class="menu">        
         <div>
           <a href="index.html"><h4>Hem</h4></a>
         </div>
@@ -32,7 +31,7 @@
       </div>
       <div class="content">
         <div class="port">
-          <!-- Får inte till 0 marginal mellan <a></a> så det blir mellan rum, vilket jag inte vill ha -->
+          <!-- Byt mot github repository länkar  -->
           <div>
             <a href="#">
               <img src="./placeholder/1.jpg" height="250" width="250"/>
