--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body> 
     <!-- Lägg till möjlighet att ändra mellan svenska och engelska -->
+    <!-- Menyn ska lägga sig som en dropdown om man minskar fönstret -->
     <div class="contain">
       <div class="menu">
         <div>
