--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta content="HTML, CSS" />
     <meta lang="sv" />
-    <meta name="viewport" content="width=device-width, initial-scale=0.25" /> 
+    <meta name="viewport" content="width=device-width, initial-scale=0.20" /> 
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./images/ME.jpg" />
     <title>Simon Jonsson - web developer</title>
@@ -13,6 +13,7 @@
   <body> 
     <!-- Lägg till möjlighet att ändra mellan svenska och engelska -->
     <!-- Menyn ska lägga sig som en dropdown om man minskar fönstret -->
+    <!-- använd feature ovan som standard för mobil -->
     <div class="contain">
       <div class="menu">
         <div>
