removed the placeholders

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -31,47 +31,22 @@
       </div>
       <div class="content">
         <div class="port">
-          <!-- Byt mot github repository länkar  -->
+          <!-- Fixa till preview på länkarna -->
           <div>
-            <a href="#">
-              <img src="./placeholder/1.jpg" height="250" width="250"/>
+            <a href="https://github.com/Behemoth39/CV-Portfolio-">
+              <img src="https://github.com/Behemoth39/CV-Portfolio-" height="250" width="250"/>
             </a>
           </div>
           <div>
-            <a href="#">
-              <img src="./placeholder/2.jpg" height="250" width="250"/>
+            <a href="https://github.com/Behemoth39/uppgift1_html">
+              <img src="https://github.com/Behemoth39/uppgift1_html" height="250" width="250"/>
             </a>
           </div>   
           <div>
-            <a href="#">
-              <img src="./placeholder/3.jpg" height="250" width="250"/>
+            <a href="https://github.com/Behemoth39/uppgift2_html">
+              <img src="https://github.com/Behemoth39/uppgift2_html" height="250" width="250"/>
             </a>
-          </div> 
-          <div>
-            <a href="#">
-              <img src="./placeholder/4.jpg" height="250" width="250"/>
-            </a>
-          </div> 
-          <div>
-            <a href="#">
-              <img src="./placeholder/5.jpg" height="250" width="250"/>
-            </a>
-          </div> 
-          <div>
-            <a href="#">
-              <img src="./placeholder/6.jpg" height="250" width="250"/>
-            </a>
-          </div> 
-          <div>
-            <a href="#">
-              <img src="./placeholder/7.jpg" height="250" width="250"/>
-            </a>
-          </div> 
-          <div>
-            <a href="#">
-              <img src="./placeholder/8.jpg" height="250" width="250"/>
-            </a>
-          </div>                
+          </div>                       
         </div>
       </div>
       <div class="links">
