--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
     <link rel="shortcut icon" href="./images/ME.jpg" />
     <title>Simon Jonsson - web developer</title>
   </head>
-  <body> 
+  <body>     
+    <div class="link-tree">        
+      <div><nav>
+      <label for="toggle">Meny</label>
+      <input type="checkbox" id="toggle">            
+      <ul>
+        <li><a href="index.html">Hem</a></li>
+        <li><a href="Om.html">Om mig</a></li>
+        <li><a href="Erfarenheter.html">Erfarenheter</a></li>
+        <li><a href="Portfolio.html">Portfolio</a></li>
+        <li><a href="Kontakt.html">Kontakta</a></li>            
+      </ul>
+    </nav></div>           
+  </div>
     <!-- Lägg till möjlighet att ändra mellan svenska och engelska -->        
     <div class="contain">
-      <div class="menu">
+      <div class="menu">        
         <div>
           <a href="index.html"><h4>Hem</h4></a>
         </div>
