Added the menu on all pages

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -10,6 +10,19 @@
     <title>Simon Jonsson - web developer</title>
   </head>
   <body>
+    <div class="link-tree">        
+      <div><nav>
+      <label for="toggle">Meny</label>
+      <input type="checkbox" id="toggle">            
+      <ul>
+        <li><a href="index.html">Hem</a></li>
+        <li><a href="Om.html">Om mig</a></li>
+        <li><a href="Erfarenheter.html">Erfarenheter</a></li>
+        <li><a href="Portfolio.html">Portfolio</a></li>
+        <li><a href="Kontakt.html">Kontakta</a></li>            
+      </ul>
+    </nav></div>           
+  </div>
     <div class="contain">
       <!-- Någon form av "transition" skulle vara bäst att ha mellan sidor  -->
       <div class="menu">        
