Almost mobile ready

--- a/index.html
+++ b/index.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>     
+  <head>
     <meta charset="UTF-8" />
     <meta content="HTML, CSS" />
     <meta lang="sv" />
-    <meta name="viewport" content="width=device-width, initial-scale=0.8" /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./images/ME.jpg" />
     <title>Simon Jonsson - web developer</title>
   </head>
-  <body>     
-    <div class="link-tree">        
-      <div><nav>
-      <label for="toggle">Meny</label>
-      <input type="checkbox" id="toggle">            
-      <ul>
-        <li><a href="index.html">Hem</a></li>
-        <li><a href="Om.html">Om mig</a></li>
-        <li><a href="Erfarenheter.html">Erfarenheter</a></li>
-        <li><a href="Portfolio.html">Portfolio</a></li>
-        <li><a href="Kontakt.html">Kontakta</a></li>            
-      </ul>
-    </nav></div>           
-  </div>
-    <!-- Lägg till möjlighet att ändra mellan svenska och engelska -->        
+  <body>    
+      <div class="link-tree">
+        <div>
+          <nav>
+            <label for="toggle">Meny </label>
+            <input type="checkbox" id="toggle" />
+            <ul>
+              <li><a href="index.html">Hem</a></li>
+              <li><a href="Om.html">Om mig</a></li>
+              <li><a href="Erfarenheter.html">Erfarenheter</a></li>
+              <li><a href="Portfolio.html">Portfolio</a></li>
+              <li><a href="Kontakt.html">Kontakta</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <div class="dmenu">
+      <div>
+        <a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/">
+          <img src="./images/linkedin.png" height="40" width="40"
+        /></a>
+        <a href="https://github.com/Behemoth39">
+          <img src="./images/GitHub.png" height="40" width="40"
+        /></a>
+      </div>
+    </div>
+    <!-- Lägg till möjlighet att ändra mellan svenska och engelska -->
     <div class="contain">
-      <div class="menu">        
+      <div class="menu">
         <div>
           <a href="index.html"><h4>Hem</h4></a>
         </div>
@@ -45,7 +57,7 @@
       <div class="content">
         <h1>Simon Jonsson</h1>
         <h5>Software & web developer*</h5>
-        <h5><div>*under utbildning</div></h5>        
+        <h5><div>*under utbildning</div></h5>
         <br />
         <div>
           <a href="Kontakt.html"><button class="btn">Kontakta mig!</button></a>
