--- a/Erfarenheter.html
+++ b/Erfarenheter.html
@@ -23,6 +23,16 @@
       </ul>
     </nav></div>           
   </div>
+  <div class="imglink">
+      <div>
+        <a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/">
+          <img src="./images/linkedin.png" height="40" width="40"
+        /></a>
+        <a href="https://github.com/Behemoth39">
+          <img src="./images/GitHub.png" height="40" width="40"
+        /></a>
+      </div>
+    </div>
     <div class="contain">
       <div class="menu">
         <div>
