--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </nav>
         </div>
       </div>
-      <div class="dmenu">
+      <div class="imglink">
       <div>
         <a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/">
           <img src="./images/linkedin.png" height="40" width="40"
